--- a/.github/workflows/Hanwckf_Padavan_CI.yml
+++ b/.github/workflows/Hanwckf_Padavan_CI.yml
@@ -68,7 +68,7 @@ jobs:
       matrix:
         include:
           - build_variant: "mt7620"
-            targets: "PSG1208 PSG1218 NEWIFI-MINI MI-MINI MI-3 OYE-001 5K-W20"
+            targets: "NEWIFI-MINI"
           - build_variant: "mt7621"
             targets: "K2P-5.0 DIR-878-5.0 RM2100 R2100"
           - build_variant: "mt7621-usb-1"
